<resources>
    <string name="app_name">KotlinTutorial</string>
    <string name="select_user">Select User</string>
    <string-array name="user_array">
        <item>Matheus</item>
        <item>Luca</item>
        <item>Jonathan</item>
    </string-array>
    <string name="name">Name</string>
    <string name="age">Age</string>
    <string name="name_age">Name-Age</string>
    <string name="name_age_preview">Name-Age (preview)</string>
    <string name="updateButton">UPDATE</string>
    <string name="saveButton">SAVE</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>